--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="container">
     
     <section id="home" class="content-section">
-        <img src="my-photo.jpg" alt="খান মোহাম্মাদ মৃদুল">
+        <img src="FB_IMG_1586442923845.jpg" alt="খান মোহাম্মাদ মৃদুল">
         <h2>স্বাগতম!</h2>
         <p>আমি খান মোহাম্মাদ মৃদুল। এটি আমার ব্যক্তিগত সংগ্রহশালা। উপরের মেনু থেকে আমার লেখালেখি বা ছবিগুলো দেখতে পারেন।</p>
     </section>
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
